<resources>
    <string name="app_name">Clinica1.1</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_carga">ClinicApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="cursania">Bienvenido..</string>
    <string name="previous">precius</string>

    <string name="cantidad">Cantidad</string>
    <string name="reserva">Reserva</string>
    <string name="nombre_especialidad">Espec:</string>

    <string name="cantidad_item">1</string>
    <string name="reserva_item">0</string>

    <string name="DoctorT">Doctor:</string>
    <string name="DiaT">Dia:</string>
    <string name="EspecialidadTitulo">Espec:</string>
    <string name="cantidadReservado">Cupo Disp.</string>
    <string name="Reservados">Reserv.</string>
    <string name="H_Desdes">Desde</string>
    <string name="H_Hasta">Hasta</string>

    <string name="Paciente">Paciente:</string>
    <string name="Fecha">Fecha:</string>
    <string name="estado">Estado:</string>
    <string name="cupoDisponible">1</string>
    <string name="cupoReservado">1</string>
    <string name="Desde">12:00 Hrs</string>
    <string name="Hasta">13:00 Hrs</string>


    <string-array name="tipo_persona">
        <item>ADMINISTRADOR</item>
        <item>DOCTOR</item>
        <item>SECRETARIA</item>
    </string-array>


    <string-array name="dias_semanas">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
</resources>

