<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp"
        >

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="163dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:id="@+id/ripLLItemSeleccionado"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/idDoctor"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/DoctorT"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/doctor"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/DoctorT"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Paciente"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/idPaciente"
                            android:layout_width="182dp"
                            android:layout_height="match_parent"
                            android:text="@string/Paciente"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/nombre_especialidad"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/espedialidad_desc"
                            android:layout_width="182dp"
                            android:layout_height="match_parent"
                            android:text="@string/nombre_especialidad"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Fecha"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/fecha"
                            android:layout_width="182dp"
                            android:layout_height="match_parent"
                            android:text="@string/Fecha"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/estado"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/estado"
                            android:layout_width="182dp"
                            android:layout_height="match_parent"
                            android:text="@string/estado"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rivCivImagen"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:src="@drawable/list" />


        </LinearLayout>



    </android.support.v7.widget.CardView>

</LinearLayout>


