<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activity.IndexEspecialidadActivity"
    xmlns:card_view="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/acEtFecha"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/campo_redondeado"
                        android:entries="@array/dias_semanas"
                        android:hint="Fecha"
                        android:padding="10dp" />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <Spinner
                        android:id="@+id/acEtPaciente"
                        android:layout_width="308dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/campo_redondeado"
                        android:hint="Doctor"
                        android:padding="10dp" />


                </LinearLayout>

                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="5dp"
                    >

                    <LinearLayout
                        android:layout_width="379dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">


                        <LinearLayout
                            android:id="@+id/ripLLItemSeleccionado"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="74dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/DoctorT"
                                        android:textSize="20sp" />

                                    <TextView
                                        android:id="@+id/idDoctor"
                                        android:layout_width="192dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/DoctorT"
                                        android:textSize="20sp" />

                                </LinearLayout>



                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView

                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:text="@string/EspecialidadTitulo"
                                        android:textSize="20sp" />

                                    <TextView
                                        android:id="@+id/idEspecialidad"
                                        android:layout_width="182dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/EspecialidadTitulo"
                                        android:textSize="20sp" />

                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="53dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/DiaT"
                                        android:textSize="20sp" />

                                    <TextView
                                        android:id="@+id/idDia"
                                        android:layout_width="182dp"
                                        android:layout_height="match_parent"
                                        android:text="@string/DiaT"
                                        android:textSize="20sp" />

                                </LinearLayout>

                            </LinearLayout>



                        </LinearLayout>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/rivCivImagen"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/list" />


                    </LinearLayout>



                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <Button
                        android:id="@+id/acFabCupos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:padding="5dp"
                        android:text="Guardar Reserva"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView
        >
</LinearLayout>